[project]
name = "claude-mirror"
version = "0.1.0"
description = "Download + ingest LLM chat exports into a Dolt-backed mirror"
authors = [
    { name = "Thad Hughes", email = "thad@imbue.com" }
]
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.15.0",
    "pydantic>=2",
    "pymysql>=1.1.3",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
]

[project.scripts]
ingest = "ingest:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "syrupy>=4.10.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["bazel-*", ".venv"]
