[project]
name = "datalib"
version = "0.1.0"
description = "Tooling environment for schema codegen + lint of datalib"
authors = [
    { name = "Thad Hughes", email = "thad@imbue.com" }
]
requires-python = ">=3.13"
# Runtime is now Rust under frankweiler/backend/. Python is kept only
# for schema codegen and host-side lint/typecheck.
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pyright>=1.1.400",
]

[tool.ruff]
# Vendored subtrees are upstream-owned; lint them in their own repo, not
# ours. Mirrors the [tool.pyright] `exclude` below.
extend-exclude = ["third-party"]

[tool.pyright]
include = ["schemas"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/bazel-*",
    "**/node_modules",
    "**/dist",
    "**/target",
    "frankweiler",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
