load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@claude_mirror_pip//:requirements.bzl", "requirement")

exports_files(["requirements.txt"])

py_library(
    name = "claude_mirror",
    srcs = glob(["src/claude_mirror/**/*.py"]),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("pydantic"),
        requirement("pyyaml"),
        requirement("typer"),
        requirement("pymysql"),
    ],
)

# Console-script entrypoint exposed as a Bazel binary so genrules can
# `$(execpath :cli)` it. Mirrors the `claude-mirror` script that pyproject
# emits for the uv-managed venv.
py_binary(
    name = "cli",
    srcs = ["src/claude_mirror/__main__.py"],
    main = "src/claude_mirror/__main__.py",
    visibility = ["//visibility:public"],
    deps = [":claude_mirror"],
)

py_test(
    name = "test_smoke",
    size = "small",
    srcs = [
        "tests/test_smoke.py",
        "tests/test_fixtures.py",
        "tests/conftest.py",
    ],
    main = "tests/conftest.py",
    data = ["//claude-mirror/tests/fixtures:source_json"],
    deps = [
        ":claude_mirror",
        requirement("pytest"),
    ],
)

# Tests that consume the cached genrule output. Inherits the genrule's
# `requires-dolt` constraint transitively (the artifact can only be
# produced where dolt is on PATH), so the test is similarly tagged.
py_test(
    name = "test_ingested_artifact",
    size = "small",
    srcs = [
        "tests/test_ingested_artifact.py",
        "tests/conftest_ingested.py",
    ],
    main = "tests/conftest_ingested.py",
    data = [
        "//claude-mirror/tests/fixtures:ingested_tng",
    ],
    tags = [
        "requires-dolt",
        "no-remote",
    ],
    deps = [
        ":claude_mirror",
        requirement("pytest"),
    ],
)

# Golden-file snapshot tests: per-table SQL and per-conversation Markdown
# from the cached genrule output. Custom syrupy extensions store goldens
# as plain `.md` / `.sql` so they render natively (no `.ambr` framing).
py_test(
    name = "test_snapshots",
    size = "small",
    srcs = [
        "tests/test_snapshots.py",
        "tests/snapshot_extensions.py",
        "tests/conftest_snapshots.py",
    ],
    main = "tests/conftest_snapshots.py",
    data = [
        "//claude-mirror/tests/fixtures:ingested_tng",
    ] + glob(["tests/__snapshots__/test_snapshots/*"]),
    tags = [
        "requires-dolt",
        "no-remote",
    ],
    deps = [
        ":claude_mirror",
        requirement("pytest"),
        requirement("syrupy"),
    ],
)
