[project]
name = "claude-mirror"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Thad Hughes", email = "thad@imbue.com" }
]
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.15.0",
    "pydantic>=2",
    "pymysql>=1.1.3",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
]

[project.scripts]
claude-mirror = "claude_mirror:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "syrupy>=4.10.1",
]
