load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# Backend-only: launch frankweiler_http_bin and open browser at /api/health.
sh_binary(
    name = "serve",
    srcs = ["serve_dev.sh"],
    data = ["//frankweiler/backend/http:frankweiler_http_bin"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Full dev: backend + Vite UI, browser opens at the Vite URL. Vite proxies
# /api → 127.0.0.1:8731. Requires pnpm on PATH.
sh_binary(
    name = "dev",
    srcs = ["dev.sh"],
    data = ["//frankweiler/backend/http:frankweiler_http_bin"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Same as :dev, but materializes a one-shot data root from the
# checked-in TNG fixtures (`//tests/fixtures:ingested_tng`) into a
# tmpdir and points the backend at it. Useful for eyeballing the grid
# without needing a real on-disk mixed-up-files root. Requires sqlite3
# on PATH (Bazel runs the genrule as `requires-dolt`, so dolt must
# also be available the first time the artifact is built).
sh_binary(
    name = "dev_tng",
    srcs = ["dev_tng.sh"],
    data = [
        ":dev",
        "//tests/fixtures:materialize_tng_root",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
