load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# Backend-only: launch frankweiler_http_bin and open browser at /api/health.
sh_binary(
    name = "serve",
    srcs = ["serve_dev.sh"],
    data = [
        "//frankweiler/backend/http:frankweiler_http_bin",
        # The HTTP backend's sync worker shells out to this; serve_dev.sh
        # exports its runfiles path as $FRANKWEILER_SYNC_BIN.
        "//frankweiler/backend/sync:frankweiler_sync_bin",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Full dev: backend + Vite UI, browser opens at the Vite URL. Both Vite
# and the backend default to ephemeral ports (printed at startup); Vite's
# /api proxy is wired to the chosen backend port via FRANKWEILER_BACKEND.
# Pin specific ports with FRANKWEILER_PORT / FRANKWEILER_BIND. Requires
# pnpm on PATH.
sh_binary(
    name = "dev",
    srcs = ["dev.sh"],
    data = [
        "//frankweiler/backend/http:frankweiler_http_bin",
        # Sync worker child; dev.sh exports its runfiles path as
        # $FRANKWEILER_SYNC_BIN so UI-triggered syncs run end-to-end.
        "//frankweiler/backend/sync:frankweiler_sync_bin",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Same as :serve, but materializes a one-shot data root from the
# checked-in TNG fixtures (`//tests/fixtures:ingested_tng`) into a
# tmpdir and points the backend at it. Useful for eyeballing the grid
# without needing a real on-disk datalib root. The packaged
# `frankweiler_http_bin` serves both the embedded SPA and `/api/*`, so
# we go through serve_dev.sh (no Vite dev server). The ingest genrule
# links doltlite statically (via `//third-party/doltlite:sqlite3`), so
# no host `dolt` install is needed.
sh_binary(
    name = "dev_tng",
    srcs = ["dev_tng.sh"],
    data = [
        ":serve",
        "//tests/fixtures:materialize_tng_root",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Same shape as :dev_tng, but bootstraps a one-shot data root from the
# in-crate Perseus tiny fixture (Thucydides 1.1, two sections, both
# languages). Translate-only — no GitHub fetch needed — so the
# pipeline runs entirely off the checked-in TEI XMLs and produces a
# data root the bilingual `edges` UI lights up against. Useful for
# eyeballing cross-language doc links + first-word span anchors
# without populating a real on-disk root.
sh_binary(
    name = "dev_perseus",
    srcs = ["dev_perseus.sh"],
    data = [
        ":serve",
        "//frankweiler/backend/sync:frankweiler_sync_bin",
        "//frankweiler/backend/etl/providers/perseus:tiny_fixture",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
