load("@rules_python//python:defs.bzl", "py_binary")

exports_files([
    "grid_rows.schema.json",
    "feedback.schema.json",
    "codegen.py",
])

py_binary(
    name = "codegen",
    srcs = ["codegen.py"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "grid_rows_rs",
    srcs = ["grid_rows.schema.json"],
    outs = ["grid_rows.rs"],
    cmd = "$(execpath :codegen) $(execpath grid_rows.schema.json) --rust $@",
    tools = [":codegen"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "grid_rows_py",
    srcs = ["grid_rows.schema.json"],
    outs = ["grid_rows.py"],
    cmd = "$(execpath :codegen) $(execpath grid_rows.schema.json) --python $@",
    tools = [":codegen"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "grid_rows_ts",
    srcs = ["grid_rows.schema.json"],
    outs = ["grid_rows.ts"],
    cmd = "$(execpath :codegen) $(execpath grid_rows.schema.json) --typescript $@",
    tools = [":codegen"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "grid_rows_all",
    srcs = [
        ":grid_rows_py",
        ":grid_rows_rs",
        ":grid_rows_ts",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "feedback_rs",
    srcs = ["feedback.schema.json"],
    outs = ["feedback.rs"],
    cmd = "$(execpath :codegen) $(execpath feedback.schema.json) --rust $@",
    tools = [":codegen"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "feedback_py",
    srcs = ["feedback.schema.json"],
    outs = ["feedback.py"],
    cmd = "$(execpath :codegen) $(execpath feedback.schema.json) --python $@",
    tools = [":codegen"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "feedback_ts",
    srcs = ["feedback.schema.json"],
    outs = ["feedback.ts"],
    cmd = "$(execpath :codegen) $(execpath feedback.schema.json) --typescript $@",
    tools = [":codegen"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "feedback_all",
    srcs = [
        ":feedback_py",
        ":feedback_rs",
        ":feedback_ts",
    ],
    visibility = ["//visibility:public"],
)
