load("@rules_python//python:defs.bzl", "py_test")
load("@py_pip//:requirements.bzl", "requirement")

py_test(
    name = "test_smoke",
    size = "small",
    srcs = [
        "test_smoke.py",
        "test_fixtures.py",
        "conftest.py",
    ],
    main = "conftest.py",
    data = ["//tests/fixtures:source_json"],
    deps = [
        "//src/ingest",
        requirement("pytest"),
    ],
)

# Pure-Python regression test for the Notion comment-thread renderer.
# Uses synthetic ParsedNotionWeb input — no fixture, no dolt, no network.
py_test(
    name = "test_notion_thread_render",
    size = "small",
    srcs = [
        "test_notion_thread_render.py",
        "conftest_notion_thread_render.py",
    ],
    main = "conftest_notion_thread_render.py",
    deps = [
        "//src/ingest",
        requirement("pytest"),
    ],
)

# Tests that consume the cached genrule output. Inherits the genrule's
# `requires-dolt` constraint transitively (the artifact can only be
# produced where dolt is on PATH), so the test is similarly tagged.
py_test(
    name = "test_ingested_artifact",
    size = "small",
    srcs = [
        "test_ingested_artifact.py",
        "conftest_ingested.py",
    ],
    main = "conftest_ingested.py",
    data = ["//tests/fixtures:ingested_tng"],
    tags = [
        "requires-dolt",
        "no-remote",
    ],
    deps = [
        "//src/ingest",
        requirement("pytest"),
    ],
)

# Golden-file snapshot tests: per-table SQL and per-conversation Markdown
# from the cached genrule output. Custom syrupy extensions store goldens
# as plain `.md` / `.sql` so they render natively (no `.ambr` framing).
py_test(
    name = "test_snapshots",
    size = "small",
    srcs = [
        "test_snapshots.py",
        "snapshot_extensions.py",
        "conftest_snapshots.py",
    ],
    main = "conftest_snapshots.py",
    imports = ["."],
    data = [
        "//tests/fixtures:ingested_tng",
    ] + glob(["__snapshots__/test_snapshots/*"]),
    tags = [
        "requires-dolt",
        "no-remote",
    ],
    deps = [
        "//src/ingest",
        requirement("pytest"),
        requirement("syrupy"),
    ],
)

# Unit tests for the qmd_bridge mapping abstraction. No qmd CLI; pure
# Python over synthetic hits and a tiny synthetic grid.
py_test(
    name = "test_qmd_bridge_mapping",
    size = "small",
    srcs = [
        "test_qmd_bridge_mapping.py",
        "conftest_qmd_bridge_mapping.py",
    ],
    main = "conftest_qmd_bridge_mapping.py",
    deps = [
        "//src/qmd_bridge",
        requirement("pytest"),
    ],
)

# Integration test: runs the real `qmd` CLI against the cached qmd
# index from `:ingested_tng_qmd`, then maps hits through to grid rows.
# Requires node/npx on PATH and the qmd models cache (the indexer
# populates ~/.cache/qmd-models on first run).
py_test(
    name = "test_qmd_bridge_integration",
    size = "large",
    srcs = [
        "test_qmd_bridge_integration.py",
        "conftest_qmd_bridge_integration.py",
    ],
    main = "conftest_qmd_bridge_integration.py",
    data = [
        "//tests/fixtures:ingested_tng",
        "//tests/fixtures:ingested_tng_qmd",
    ],
    tags = [
        "requires-network",
        "no-remote",
        "no-sandbox",
    ],
    deps = [
        "//src/ingest",
        "//src/qmd_bridge",
        requirement("pytest"),
    ],
)
