load("@rules_python//python:defs.bzl", "py_test")
load("@py_pip//:requirements.bzl", "requirement")

py_test(
    name = "test_smoke",
    size = "small",
    srcs = [
        "test_smoke.py",
        "test_fixtures.py",
        "conftest.py",
    ],
    main = "conftest.py",
    data = ["//tests/fixtures:source_json"],
    deps = [
        "//src/ingest",
        requirement("pytest"),
    ],
)

# Pure-Python unit test for the worker package (Phase D).
py_test(
    name = "test_worker",
    size = "small",
    srcs = [
        "test_worker.py",
        "conftest_worker.py",
    ],
    main = "conftest_worker.py",
    deps = [
        "//src/worker",
        requirement("pytest"),
    ],
)

# Pure-Python unit test for per-provider orphan cleanup (C.6).
py_test(
    name = "test_orphan_cleanup",
    size = "small",
    srcs = [
        "test_orphan_cleanup.py",
        "conftest_orphan_cleanup.py",
    ],
    main = "conftest_orphan_cleanup.py",
    deps = [
        "//src/ingest",
        requirement("pytest"),
    ],
)

# Tests that consume the cached genrule output. Inherits the genrule's
# `requires-dolt` constraint transitively (the artifact can only be
# produced where dolt is on PATH), so the test is similarly tagged.
py_test(
    name = "test_ingested_artifact",
    size = "small",
    srcs = [
        "test_ingested_artifact.py",
        "conftest_ingested.py",
    ],
    main = "conftest_ingested.py",
    data = ["//tests/fixtures:ingested_tng"],
    tags = [
        "requires-dolt",
        "no-remote",
    ],
    deps = [
        "//src/ingest",
        requirement("pytest"),
    ],
)

# Golden-file snapshot tests: per-table SQL and per-conversation Markdown
# from the cached genrule output. Custom syrupy extensions store goldens
# as plain `.md` / `.sql` so they render natively (no `.ambr` framing).
py_test(
    name = "test_snapshots",
    size = "small",
    srcs = [
        "test_snapshots.py",
        "snapshot_extensions.py",
        "conftest_snapshots.py",
    ],
    main = "conftest_snapshots.py",
    imports = ["."],
    data = [
        "//tests/fixtures:ingested_tng",
    ] + glob(["__snapshots__/test_snapshots/*"]),
    tags = [
        "requires-dolt",
        "no-remote",
    ],
    deps = [
        "//src/ingest",
        requirement("pytest"),
        requirement("syrupy"),
    ],
)

# Live Slack sync integration test. Boots the real frankweiler_http_bin
# against a fresh tmpdir data_root, drives a download via POST
# /api/sync/jobs, and asserts on-disk output + grid rows.
#
# Non-hermetic: hits real Slack, needs `latchkey` + `dolt` + `python3`
# on PATH, and credentials for the slack service in latchkey. Tagged
# `manual` so `//...` skips it; run via
#     bazelisk test //tests:slack_live_test
py_test(
    name = "slack_live_test",
    size = "enormous",
    timeout = "long",
    srcs = [
        "test_slack_live.py",
        "conftest_slack_live.py",
    ],
    main = "conftest_slack_live.py",
    data = [
        "//frankweiler/backend/http:frankweiler_http_bin",
        "//src/worker",
    ],
    # The test shells out to host-installed binaries (latchkey, dolt,
    # python3) and reads latchkey credentials from $HOME. Pass these
    # through from the invoker's environment.
    env_inherit = [
        "PATH",
        "HOME",
    ],
    tags = [
        "manual",
        "external",
        "requires-network",
        "no-sandbox",
        "no-remote",
    ],
    deps = [
        "//src/worker",
        requirement("pytest"),
    ],
)

# Unit tests for the qmd_bridge mapping abstraction. No qmd CLI; pure
# Python over synthetic hits and a tiny synthetic grid.
py_test(
    name = "test_qmd_bridge_mapping",
    size = "small",
    srcs = [
        "test_qmd_bridge_mapping.py",
        "conftest_qmd_bridge_mapping.py",
    ],
    main = "conftest_qmd_bridge_mapping.py",
    deps = [
        "//src/qmd_bridge",
        requirement("pytest"),
    ],
)

# Integration test: runs the real `qmd` CLI against the cached qmd
# index from `:ingested_tng_qmd`, then maps hits through to grid rows.
# Requires node/npx on PATH and the qmd models cache (the indexer
# populates ~/.cache/qmd-models on first run).
py_test(
    name = "test_qmd_bridge_integration",
    size = "large",
    srcs = [
        "test_qmd_bridge_integration.py",
        "conftest_qmd_bridge_integration.py",
    ],
    main = "conftest_qmd_bridge_integration.py",
    data = [
        "//tests/fixtures:ingested_tng",
        "//tests/fixtures:ingested_tng_qmd",
    ],
    tags = [
        "requires-network",
        "no-remote",
        "no-sandbox",
    ],
    deps = [
        "//src/ingest",
        "//src/qmd_bridge",
        requirement("pytest"),
    ],
)
