load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "check_qmd_model_cache_path.sh",
    "check_version_consistency.sh",
    "insta_update.sh",
    "workspace_status.sh",
])

# Asserts that the vendored qmd snapshot, our .bazelrc mount path,
# and `default_models_dir()` all agree on `~/.cache/qmd/models` (the
# upstream qmd default). See check_qmd_model_cache_path.sh for the
# full rationale. Pairs with the rust-side unit test
# //frankweiler/backend/qmd_indexer:qmd_indexer_unittests.
sh_test(
    name = "qmd_model_cache_path_test",
    size = "small",
    srcs = ["check_qmd_model_cache_path.sh"],
    data = [
        "//:.bazelrc",
        "//frankweiler/backend/qmd_indexer:src/lib.rs",
        "//third-party/qmd:package.json",
        "//third-party/qmd:src/llm.ts",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
