load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "check_cargo_lock_versions.sh",
    "check_qmd_model_pins.sh",
    "check_qmd_version_pins.sh",
    "check_version_consistency.sh",
    "insta_update.sh",
    "repin_cargo.sh",
    "workspace_status.sh",
])

# Asserts the three `http_file` GGUF pins in MODULE.bazel still name the
# same HuggingFace repo + file that qmd resolves by default (its
# DEFAULT_*_MODEL constants in third-party/qmd/src/llm.ts). Catches a
# qmd upgrade that changes a default model out from under our pins. See
# check_qmd_model_pins.sh for the full rationale. Companion to
# //tools:qmd_version_pins_test.
sh_test(
    name = "qmd_model_pins_test",
    size = "small",
    srcs = ["check_qmd_model_pins.sh"],
    data = [
        "//:MODULE.bazel",
        "//third-party/qmd:src/llm.ts",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Asserts that every qmd version pin in the workspace agrees with
# `DEFAULT_QMD_VERSION` in qmd_indexer/src/lib.rs. Catches the case
# where the Dockerfile bakes one qmd version into the image but
# frankweiler-sync runtime fetches a different one via
# `npx -y @tobilu/qmd@<v>` — leaving the baked model layer unused.
sh_test(
    name = "qmd_version_pins_test",
    size = "small",
    srcs = ["check_qmd_version_pins.sh"],
    data = [
        "//frankweiler/backend/qmd_indexer:src/lib.rs",
        "//frankweiler/docker:Dockerfile",
        "//tests/fixtures:BUILD.bazel",
        "//third-party/qmd:package.json",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
