load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

# Enforces that frankweiler/backend/sync/BUILD.bazel's `rust_binary
# version = "..."` matches [workspace.package].version in
# frankweiler/backend/Cargo.toml (the single source of truth). Picked
# up by `bazelisk test //...`; fails with a diff that names both
# files so the bump is obvious.
sh_test(
    name = "version_consistency_test",
    size = "small",
    srcs = ["//tools:check_version_consistency.sh"],
    data = [
        "Cargo.toml",
        "//frankweiler/backend/sync:BUILD.bazel",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Set of rust_binary targets bundled into the install.sh release tarball.
# Adding a binary here gets it shipped to users on the next tagged release;
# .github/workflows/release.yml renames each bazel output to its public
# `frankweiler-<name>` form before tarring, and scripts/install.sh drops
# the result into the user's install dir (default ~/.local/bin).
filegroup(
    name = "dist",
    srcs = [
        # The curl shim is bundled because every CF-fronted provider
        # (claude.ai, chatgpt.com, files.slack.com) 403s on vanilla
        # curl's TLS fingerprint. `frankweiler-sync` resolves it from
        # `LATCHKEY_CURL`, `FRANKWEILER_CURL_SHIM`, or a sibling-of-self
        # lookup against `frankweiler-latchkey-curl-shim` — see
        # `frankweiler_etl::latchkey::ensure_curl_shim`. Keep the public
        # `frankweiler-` prefix mapping in release.yml's stage step in
        # sync with the sibling-name list in latchkey.rs.
        "//frankweiler/backend/etl:latchkey_curl_shim",
        "//frankweiler/backend/sync:frankweiler_sync_bin",
    ],
    visibility = ["//visibility:public"],
)
