load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "Cargo.toml",
    "Cargo.lock",
    # Wired into `bazelisk build --config=clippy` via .bazelrc — see
    # `--@rules_rust//rust/settings:clippy.toml=//frankweiler/backend:clippy.toml`.
    "clippy.toml",
])

# Enforces that frankweiler/backend/sync/BUILD.bazel's `rust_binary
# version = "..."` matches [workspace.package].version in
# frankweiler/backend/Cargo.toml (the single source of truth). Picked
# up by `bazelisk test //...`; fails with a diff that names both
# files so the bump is obvious.
sh_test(
    name = "version_consistency_test",
    size = "small",
    srcs = ["//tools:check_version_consistency.sh"],
    data = [
        "Cargo.toml",
        "//frankweiler/backend/dag:BUILD.bazel",
        "//frankweiler/backend/http:BUILD.bazel",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Asserts every `frankweiler-*` workspace crate in Cargo.lock is pinned
# to the version declared by [workspace.package].version in Cargo.toml.
# Catches the common drift where `CARGO_BAZEL_REPIN=1 bazel test //...`
# cache-hits every target after a version bump and Cargo.lock silently
# stays at the old version. Failure message points at //tools:repin_cargo.sh
# for the fix.
sh_test(
    name = "cargo_lock_versions_test",
    size = "small",
    srcs = ["//tools:check_cargo_lock_versions.sh"],
    data = [
        "Cargo.lock",
        "Cargo.toml",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Set of rust_binary targets bundled into the install.sh release tarball.
# Adding a binary here gets it shipped to users on the next tagged release;
# .github/workflows/release.yml renames each bazel output to its public
# `frankweiler-<name>` form before tarring, and scripts/install.sh drops
# the result into the user's install dir (default ~/.local/bin).
filegroup(
    name = "dist",
    srcs = [
        # The curl shim is bundled because every CF-fronted provider
        # (claude.ai, chatgpt.com, files.slack.com) 403s on vanilla
        # curl's TLS fingerprint. `datalib-step` resolves it from
        # `LATCHKEY_CURL`, `FRANKWEILER_CURL_SHIM`, or a sibling-of-self
        # lookup against `frankweiler-latchkey-curl-shim` — see
        # `frankweiler_etl::latchkey::ensure_curl_shim`. Keep the public
        # name mapping in release.yml's stage step in sync with the
        # sibling-name list in latchkey.rs.
        "//frankweiler/backend/etl:latchkey_curl_shim",
        # HTTP backend with the Vite-built UI embedded via rust-embed
        # (see frankweiler/backend/http/src/embed.rs). Single binary
        # serves the full search experience given a data root path —
        # `frankweiler-http <data_root>` is the user-facing invocation.
        "//frankweiler/backend/http:frankweiler_http_bin",
        # The DAG runner + step host, spawned by http's sync worker (and
        # invocable standalone against a data root's config.yaml).
        "//frankweiler/backend/dag:datalib_dag",
        "//frankweiler/backend/datalib_step:datalib_step",
    ],
    visibility = ["//visibility:public"],
)
