[workspace]
resolver = "2"
members = [
    "schema",
    "core",
    "http",
    "etl",
    "etl/providers/anthropic",
    "etl/providers/chatgpt",
    "etl/providers/github",
    "etl/providers/gitlab",
    "etl/providers/notion",
    "etl/providers/slack",
    "qmd_indexer",
    "sync",
    "tauri-backend",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.83"
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.8"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
# sqlx is the MySQL client driving DoltRepo against the managed
# `dolt sql-server`. Features:
#   runtime-tokio-rustls — async runtime + pure-rust TLS, avoids OpenSSL
#   mysql                — only backend
#   macros               — `query!` / `query_as!` (not yet used; cheap)
#   chrono               — map ISO-8601 strings to/from chrono types
#   json                 — `context_json` column on the feedback table
#   uuid                 — `feedback_uuid` primary keys
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "chrono",
    "json",
    "uuid",
] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
async-trait = "0.1"
