# Surface the Dockerfile + entrypoint as data targets so consistency
# tests (e.g. //tools:qmd_version_pins_test) can read them at test time.
# No build rules live here — the docker image is built by
# `scripts/build_docker.sh` (locally) or the docker-publish job in
# `.github/workflows/release.yml` (CI), not by Bazel.
exports_files([
    "Dockerfile",
    "entrypoint.sh",
])
